syntax = "proto3";

package stats.service.dashboard;

import "stats/message/user_predictions_request.proto";
import "stats/message/recommended_event.proto";
import "stats/message/similar_events_request.proto";
import "stats/message/interactions_count_request.proto";

option java_package = "ru.practicum.ewm.stats.protobuf";

service RecommendationsController {

  rpc GetRecommendationsForUser(stats.message.UserPredictionsRequestProto) returns (stream stats.message.RecommendedEventProto);

  rpc GetSimilarEvents(stats.message.SimilarEventsRequestProto) returns (stream stats.message.RecommendedEventProto);

  rpc GetInteractionsCount(stats.message.InteractionsCountRequestProto) returns (stream stats.message.RecommendedEventProto);
}